# Based-Image-Retrieval-System

./: .gitignore  README.md  app.py  cli.py  pyproject.toml  requirements.txt
src/: main.py  shape_features.py  shape_retrieval.py  texture_features.py  texture_retrieval.py  utils.py
static/: script.js  styles.css
template/: index.html
